--- a/index.html
+++ b/index.html
@@ -1,94 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>portfolio</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="col-8 mx-auto">
-        <div class="col-4">
-            <h2>Давыдов Алексей</h2>
-            <h3>учится на програмиста</h3>
-        </div>
-        <div class="mt-5">
-            <h2 class="text-center">обо мне</h2>
-        </div>
-        <div class="col-12 d-flex ">
-            <div class="col-5 p-3 border border-info text-center">
-                <img src="avatar.png"class="w-75">
-                <p>разработчик из Якутии</p>
-            </div>
-            <div class="col-7 p-3 border border-info">
-                <p>мне 12 лет, летом будет 13 лет</p>
-            </div>            
-        </div>
-        <h2 class="text-center mt-5">мои работы</h2>
-        <div class="col-12 d-flex bg-info mt-3 p-5">
-            <div class="col-6">
-                <img src="work1.jpg"class="w-75">
-            </div>
-            <div class="col-6">
-                <h1>Вёрстка YouTube</h1>
-                <p>Шаблон YouTube на Bootstrap,использовал оригинальные иконки YouTube</p>
-            </div>
-        </div>
-        <div class="col-12 d-flex bg-info mt-3 p-5">
-            <div class="col-6">
-                <h1>Школьное расписание</h1>
-                <p>Сделал расписание уроков которые подходят мне</p>
-            </div>
-            <div class="col-6">
-                <img src="work2.jpg"class="w-75">
-            </div>
-        </div>
-        <div class="col-12 d-flex bg-info mt-3 p-5">
-            <div class="col-6">
-                <img src="work3.jpg"class="w-75">
-            </div>
-            <div class="col-6">
-                <h1>Kinopoisk HD</h1>
-                <p>Шаблон Kinopoisk на Bootstrap,выполнил работу для практики вёрстки.Узнал много нового пока делал эту работу</p>
-            </div>
-        </div>
-           
-        <div class="col-12 p-5  border border-info mt-5">
-            <h2 class="text-center">мои навыки</h2>
-            <h class="">Дизайн</h3>
-            <p>Умею создавать разнообразные структуры сайтов и придумывать их дизайн</p>
-            <ul class="hr">
-                <li>Figma</li>
-            </ul>
-            <h class="">Front-end</h3>
-            <p>Верстаю адаптивные сайты на которые приятно смотреть</p>
-            <ul class="hr">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Bootstrap</li>
-            </ul>     
-            <h class="">Soft-skils</h3>
-            <p>Умею работать в команде.</p>  
-        </div>
-        <div class="col-12 p-5 border border-info mt-5">
-            <h2></h2>
-            <div class="col-12 d-flex">
-                <div class="col-4 d-flex">
-                    <img src="images.png"class="w-25">
-                    <a href="#"class="col-10">alexdavyd1707@gmail.com</a>
-                </div>
-                <div class="col-4 d-flex">
-                    <img src="github.png"class="w-25">
-                    <a href="https://github.com/alex1707-24"class="col-10">ссылка</a>
-                </div>
-                <div class="col-4 d-flex">
-                    <img src="discord.png"class="w-25">
-                    <a href="discordapp.com/users/alex_7_777_00279"class="col-10">ссылка</a>
-                </div>                
-            </div>
-        </div>
-
-    </div>
+	<div>
+		<div class="col-8 mx-auto bg-danger"style="height: 1200px;">
+			<div>
+				<h1>давыдов алексей</h1>
+				<h3>начинающий программист</h3>
+			</div>
+			<div class="d-flex col-10 mx-auto">
+				<div class="col-1"	>
+					<img src="avatar.png"class="w-100">
+				</div>				
+				<div class="col-6"style="">
+					<p>портфолио</p>
+				</div>				
+			</div>
+			<div> 
+				<h1>мои работы</h1>
+			</div>
+			<div class="d-flex col-10 mx-auto mt-3">
+				<div class="col-6">
+					<img src="DODO.png"class="w-100">
+				</div>
+				<div class="col-6">
+					<h2>Верстка сайта DODO</h2>
+					<a href="https://alex1707-24.github.io/DODO/">DODO. Добавление в корзину и удаление</a>
+				</div>
+			</div>
+			<div class="d-flex col-10 mx-auto mt-3">
+				<div class="col-6">
+					<h2>Верстка Donat</h2>
+					<a href="https://alex1707-24.github.io/Donat/">Donat. Начисление денег на то что выбрал</a>
+				</div>
+				<div class="col-6">
+					<img src="donat.png"class="w-100">
+				</div>
+				
+			</div>
+			<div class="d-flex col-10 mx-auto mt-3">
+				<div class="col-6">
+					<img src="parol.png"class="w-100">
+				</div>
+				<div class="col-6">
+					<h2>Верстка Parol</h2>
+					<a href="https://alex1707-24.github.io/Parol/">Parol. Страница регистрации Instagram</a>
+				</div>
+			</div>
+			<div class="d-flex col-10 mx-auto mt-3">
+				<div class="col-6">
+					<h2>Верстка Steam</h2>
+					<a href="https://alex1707-24.github.io/Steam/">Steam. Игры которые хотелось бы</a>
+				</div>
+				<div class="col-6">
+					<img src="plas.png"class="w-100">
+				</div>
+			</div>
+			<div class="d-flex col-10 mx-auto mt-3">
+				<div class="col-6">
+					<img src="twitter.png"class="w-100">
+				</div>
+				<div class="col-6">
+					<h2>Верстка Twitter</h2>
+					<a href="https://alex1707-24.github.io/Twitter/">Twitter. Выкладывание постов</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
-</html>    
+</html>
