--- a/index.html
+++ b/index.html
@@ -6,37 +6,34 @@
 	<title>portfolio</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-dark">
 	<div>
-		<div class="col-8 mx-auto bg-danger"style="height: 1200px;">
-			<div>
-				<h1>давыдов алексей</h1>
+		<div class="col-8 mx-auto bg-secondary">
+			<div class="text-center">
+				<h1>Давыдов Алексей</h1>
 				<h3>начинающий программист</h3>
 			</div>
 			<div class="d-flex col-10 mx-auto">
 				<div class="col-1"	>
 					<img src="avatar.png"class="w-100">
-				</div>				
-				<div class="col-6"style="">
-					<p>портфолио</p>
-				</div>				
+				</div>						
 			</div>
-			<div> 
-				<h1>мои работы</h1>
+			<div class="text-center"> 
+				<h1>Мои работы</h1>
 			</div>
 			<div class="d-flex col-10 mx-auto mt-3">
 				<div class="col-6">
 					<img src="DODO.png"class="w-100">
 				</div>
 				<div class="col-6">
-					<h2>Верстка сайта DODO</h2>
-					<a href="https://alex1707-24.github.io/DODO/">DODO. Добавление в корзину и удаление</a>
+					<h2 class="ms-5">Верстка сайта DODO</h2>
+					<a href="https://alex1707-24.github.io/DODO/" class="text-info ms-5 ">DODO. Добавление в корзину и удаление</a>
 				</div>
 			</div>
 			<div class="d-flex col-10 mx-auto mt-3">
 				<div class="col-6">
 					<h2>Верстка Donat</h2>
-					<a href="https://alex1707-24.github.io/Donat/">Donat. Начисление денег на то что выбрал</a>
+					<a href="https://alex1707-24.github.io/Donat/"class="text-info">Donat. Начисление денег на то что выбрал</a>
 				</div>
 				<div class="col-6">
 					<img src="donat.png"class="w-100">
@@ -48,14 +45,14 @@
 					<img src="parol.png"class="w-100">
 				</div>
 				<div class="col-6">
-					<h2>Верстка Parol</h2>
-					<a href="https://alex1707-24.github.io/Parol/">Parol. Страница регистрации Instagram</a>
+					<h2 class="ms-5">Верстка Parol</h2>
+					<a href="https://alex1707-24.github.io/Parol/" class="ms-5 text-info">Parol. Страница регистрации Instagram</a>
 				</div>
 			</div>
 			<div class="d-flex col-10 mx-auto mt-3">
 				<div class="col-6">
 					<h2>Верстка Steam</h2>
-					<a href="https://alex1707-24.github.io/Steam/">Steam. Игры которые хотелось бы</a>
+					<a href="https://alex1707-24.github.io/Steam/"class="text-info">Steam. Игры которые хотелось бы</a>
 				</div>
 				<div class="col-6">
 					<img src="plas.png"class="w-100">
@@ -66,8 +63,8 @@
 					<img src="twitter.png"class="w-100">
 				</div>
 				<div class="col-6">
-					<h2>Верстка Twitter</h2>
-					<a href="https://alex1707-24.github.io/Twitter/">Twitter. Выкладывание постов</a>
+					<h2 class="ms-5">Верстка Twitter</h2>
+					<a href="https://alex1707-24.github.io/Twitter/" class="ms-5 text-info">Twitter. Выкладывание постов</a>
 				</div>
 			</div>
 		</div>
